--- a/ihm/src/index.html
+++ b/ihm/src/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <base href="/" />
-    <title>Ihm</title>
+    <title>Angular 7 User Registration and Login Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
